cloud-infra-macros/tests/fails/non_zero_number_invalid_string.stderr
error: value is not a valid number
 --> tests/fails/non_zero_number_invalid_string.rs:4:15
  |
4 |     let key = non_zero_number!("not_a_number");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `non_zero_number` (in Nightly builds, run with -Z macro-backtrace for more info)
